CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
project(thread_pool LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_BINARY_DIR ${PROJECT_SOURCE_DIR}/build)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(src)

target_precompile_headers(${PROJECT_NAME}
        PRIVATE
        ${PROJECT_SOURCE_DIR}/pch/pch.h
)

#find_package(liburing REQUIRED)